--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "bootstrap-sass": "~3.3.5",
     "underscore": "1.8.3",
-    "moment": "2.10.3"
+    "moment": "2.10.3",
+    "react": "~0.13.3"
   },
   "overrides": {
     "bootstrap-sass": {
